# dharanidhi_mobile_otp

./: .gitignore
infra/: docker-compose.yaml
nextjs-frontend/: .gitignore  README.md  package.json
nextjs-frontend/src/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/src/app/otp/: page.tsx
nextjs-frontend/src/components/: OtpInputs.tsx  OtpVerifyForm.tsx  SendOtpForm.tsx
python-backend/: .env.dev  .env.prod  README.md  pyproject.toml
python-backend/alembic/: env.py
python-backend/alembic/versions/: 0001_create_otp_tables.py
python-backend/src/mobile_otp/: __init__.py  main.py
python-backend/src/mobile_otp/api/: __init__.py
python-backend/src/mobile_otp/api/routers/: __init__.py  otp.py
python-backend/src/mobile_otp/api/schemas/: __init__.py  otp.py
python-backend/src/mobile_otp/core/: __init__.py  config.py  errors.py  logging.py
python-backend/src/mobile_otp/dao/: __init__.py  base.py  otp_event_dao.py  otp_request_dao.py
python-backend/src/mobile_otp/db/: __init__.py  base.py  init_db.py  session.py
python-backend/src/mobile_otp/integrations/: __init__.py  twilio_verify_client.py
python-backend/src/mobile_otp/models/: __init__.py  otp.py
python-backend/src/mobile_otp/services/: __init__.py  otp_service.py
python-backend/src/mobile_otp/transactions/: __init__.py  transactional.py  unit_of_work.py
python-backend/src/mobile_otp/utils/: __init__.py  redaction.py  time.py
python-backend/tests/: test_health.py  test_otp_flow.py
