[project]
name = "mobile-otp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "saikumar.k1103@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[project.scripts]
mobile-otp = "mobile_otp.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
